Add existing PVC support

--- a/config/operator/base/crd/bases/operator.kyma-project.io_dockerregistries.yaml
+++ b/config/operator/base/crd/bases/operator.kyma-project.io_dockerregistries.yaml
@@ -98,6 +98,13 @@ spec:
                     required:
                     - bucket
                     type: object
+                  pvc:
+                    properties:
+                      name:
+                        type: string
+                    required:
+                    - name
+                    type: object
                   s3:
                     properties:
                       bucket:
