--- a/config/docker-registry/values.yaml
+++ b/config/docker-registry/values.yaml
@@ -81,6 +81,7 @@ persistence:
   enabled: true
   size: 20Gi
   # storageClass: '-'
+  # existingClaim: ""
 
 # set the type of filesystem to use: filesystem, s3.
 # If filesystem is used, you should also add it to configData, below
@@ -120,12 +121,10 @@ storage: filesystem
 #  authurl: http://swift.example.com/
 #  container: my-container
 
-
 # gcs:
 #  bucket: ""
 #  rootdirectory: ""
 #  chunkSize: 5242880
-
 
 # https://docs.docker.com/registry/configuration/
 configData: # example: https://github.com/docker/distribution/blob/master/cmd/registry/config-dev.yml
