--- a/.github/workflows/_images-verify.yaml
+++ b/.github/workflows/_images-verify.yaml
@@ -1,6 +1,7 @@
 name: images verify
 run-name: ${{github.event.pull_request.title}}
-on: 
+on:
+  workflow_call:
   pull_request:
     branches: 
       - main
