--- a/.github/workflows/pull.yaml
+++ b/.github/workflows/pull.yaml
@@ -16,11 +16,11 @@ jobs:
     uses: ./.github/workflows/_images-verify.yaml
 
   builds:
-    needs: images-verify]
+    needs: [images-verify]
     uses: ./.github/workflows/_build-pull.yaml
 
   integrations:
     needs: builds
     uses: ./.github/workflows/_integration-tests-pull.yaml
-    with:
-      image: europe-docker.pkg.dev/kyma-project/dev/serverless-operator:PR-${{ github.event.number }}
+    # with:
+    #   image: europe-docker.pkg.dev/kyma-project/dev/serverless-operator:PR-${{ github.event.number }}
