--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -11,8 +11,8 @@ jobs:
   integrations:
     needs: builds
     uses: ./.github/workflows/_integration-tests-push.yaml
-    with:
-      image: europe-docker.pkg.dev/kyma-project/prod/serverless-operator:${{ github.sha }}
+    # with:
+    #   image: europe-docker.pkg.dev/kyma-project/prod/serverless-operator:${{ github.sha }}
 
   upgrades:
     needs: builds
