--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -74,42 +74,15 @@ jobs:
           git tag ${{ github.event.inputs.name }}
           git push origin ${{ github.event.inputs.name }}
 
-  compute-tags:
+  builds:
     needs: create-tag
-    runs-on: ubuntu-latest
-    outputs:
-      tags: ${{ steps.get_tag.outputs.TAGS }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Get the latest tag
-        id: get_tag
-        run: |
-          {
-            echo 'TAGS<<EOF'
-            echo "${{ github.sha }}"
-            echo "${{ github.event.inputs.name }}"
-            echo EOF
-          } >> "$GITHUB_OUTPUT"
-
-  build-operator:
-    needs: compute-tags
-    uses: kyma-project/test-infra/.github/workflows/image-builder.yml@main # Usage: kyma-project/test-infra/.github/workflows/image-builder.yml@main
+    uses: ./.github/workflows/_build-push.yaml
     with:
-      name: dockerregistry-operator
-      dockerfile: components/operator/Dockerfile
-      tags: ${{ needs.compute-tags.outputs.tags }}
-  build-registry-init:
-    needs: compute-tags
-    uses: kyma-project/test-infra/.github/workflows/image-builder.yml@main # Usage: kyma-project/test-infra/.github/workflows/image-builder.yml@main
-    with:
-      name: registry-init
-      dockerfile: components/registry-init/Dockerfile
-      tags: ${{ needs.compute-tags.outputs.tags }}
+      tag: "${{ github.event.inputs.name }}"
 
   create-draft:
     name: Create draft release
-    needs: [build-operator, build-registry-init]
+    needs: [builds]
     runs-on: ubuntu-latest
 
     steps:
