--- a/.github/workflows/_build.yaml
+++ b/.github/workflows/_build.yaml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - if: ${{ github.event_name == 'push' }}
+      - if: ${{ github.event_name != 'pull_request' }}
         name: Get the latest tag
         id: get_tag
         run: |
