pass secrets to called integration and upgrade workflows

--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -119,6 +119,7 @@ jobs:
 
   integrations:
     needs: create-draft
+    secrets: inherit
     uses: ./.github/workflows/_integration-tests.yaml
     with:
       image: europe-docker.pkg.dev/kyma-project/prod/dockerregistry-operator:${{ github.event.inputs.name }}
