--- a/.github/workflows/pull.yaml
+++ b/.github/workflows/pull.yaml
@@ -21,6 +21,7 @@ jobs:
 
   integrations:
     needs: builds
+    secrets: inherit
     uses: ./.github/workflows/_integration-tests.yaml
     with:
       image: europe-docker.pkg.dev/kyma-project/dev/dockerregistry-operator:PR-${{ github.event.number }}
