Fix build (release) workflow call

--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -76,7 +76,7 @@ jobs:
 
   builds:
     needs: create-tag
-    uses: ./.github/workflows/_build-push.yaml
+    uses: ./.github/workflows/_build.yaml
     with:
       tag: "${{ github.event.inputs.name }}"
 
