--- a/sec-scanners-config.yaml
+++ b/sec-scanners-config.yaml
@@ -2,7 +2,7 @@ module-name: docker-registry
 rc-tag: 0.1.0
 protecode:
   - europe-docker.pkg.dev/kyma-project/prod/dockerregistry-operator:main
-  - europe-docker.pkg.dev/kyma-project/prod/external/registry:2.8.3
+  - europe-docker.pkg.dev/kyma-project/prod/external/library/registry:2.8.3-v1
   - europe-docker.pkg.dev/kyma-project/prod/registry-init:v20240506-57d31b1d
 whitesource:
   language: golang-mod
