add the gateway field to the status

--- a/config/operator/base/crd/bases/operator.kyma-project.io_dockerregistries.yaml
+++ b/config/operator/base/crd/bases/operator.kyma-project.io_dockerregistries.yaml
@@ -209,6 +209,9 @@ spec:
                   enabled:
                     description: Enabled indicates whether the network access is enabled.
                     type: string
+                  gateway:
+                    description: Gateway indicates which gateway is used.
+                    type: string
                   pullAddress:
                     description: PullAddress contains address kubernetes can use to
                       pull images from the registry.
