--- a/components/operator/.golangci.yaml
+++ b/components/operator/.golangci.yaml
@@ -1,15 +1,23 @@
 run:
+  modules-download-mode: readonly
   timeout: 15m
 linters:
   disable-all: true
   enable:
     - errcheck
+    - copyloopvar
+    - gofmt
     - gosimple
     - govet
     - ineffassign
     - staticcheck
+    - unparam
     - unused
 issues:
+  max-issues-per-linter: 0
+  max-same-issues: 0
   exclude:
     # function for future usage
     - "^func `stopWithErrorOrRequeue` is unused$"
+    - 'secretContainsRequired - result 0 \(bool\) is always false'
+    - 'secretContainsSameValues - result 0 \(bool\) is always false'
