--- a/.github/workflows/_images-verify.yaml
+++ b/.github/workflows/_images-verify.yaml
@@ -7,6 +7,8 @@ jobs:
   # check if developer doesn't change `main` images in the values.yaml and sec-scanners-config.yaml files
   check-main-tags:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.base.ref == 'main'
+
     steps:
       - name: Checkout to main
         uses: actions/checkout@v4
@@ -23,6 +25,9 @@ jobs:
 
       - name: Checkout to context
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
       
       - name: Verify sec-scanners-config.yaml images
         run: |
