--- a/config/operator/base/cli-extensions/dockerregistry/kustomization.yaml
+++ b/config/operator/base/cli-extensions/dockerregistry/kustomization.yaml
@@ -1,17 +1,13 @@
 configMapGenerator:
-- name: operator.kyma-project.io
+- name: operator.cli
   namespace: kube-public
   files:
-  - general
-  - form
-  - list
-  - details
-  - translations
+  - rootCommand
+  - coreCommands
   options:
     disableNameSuffixHash: true
     labels:
       app.kubernetes.io/component: configmap
       app.kubernetes.io/instance: dockerregistry-operator-configmap
       app.kubernetes.io/name: dockerregistry-operator
-      busola.io/extension: resource
-      busola.io/extension-version: "0.5"
+      kyma-cli/extension: resource
