--- a/.github/workflows/_integration-tests.yaml
+++ b/.github/workflows/_integration-tests.yaml
@@ -7,6 +7,11 @@ on:
         description: 'The image to test'
         required: true
         type: string
+      trigger_btp:
+        description: 'Trigger BTP integration test'
+        required: false
+        type: boolean
+        default: false
 
 
 jobs:
@@ -58,7 +63,7 @@ jobs:
           GARDENER_SA_PATH: /tmp/gardener-sa.yaml
 
   btp-integration-tests:
-    if: ${{ !startsWith(github.event_name, 'pull_request') }}
+    if: ${{ inputs.trigger_btp }}
     runs-on: ubuntu-latest
     defaults:
       run:
