add deleteEnabled option

--- a/config/docker-registry/values.yaml
+++ b/config/docker-registry/values.yaml
@@ -134,6 +134,8 @@ configData: # example: https://github.com/docker/distribution/blob/master/cmd/re
     fields:
       service: registry
   storage:
+    delete:
+      enabled: false
     cache:
       blobdescriptor: inmemory
   http:
