--- a/config/operator/base/ui-extensions/dockerregistry/kustomization.yaml
+++ b/config/operator/base/ui-extensions/dockerregistry/kustomization.yaml
@@ -1,6 +1,6 @@
 configMapGenerator:
 - name: operator.kyma-project.io
-  namespace: kube-public
+  namespace: kyma-system
   files:
   - general
   - form
